--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 .boundingBox {
 	padding: 0;
 	position: fixed;
-	background-color: #EC7F4B;
+	background-color: #333;
 }
 
 .box {
-	background-color: #2D88CD;
+	background-color: #C389FA;
 	height: 150px;
 	width: 300px;
 	position: absolute;
