Update styles for bounding box

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@
 
 .boundingBox {
 	padding: 0;
-	position: fixed;
-	background-color: #333;
+	position: absolute;
+	background-color: transparent;
 }
 
 .box {
