Update styles for boxes and allow style to be passed to AlignmentGuides component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
 }
 
 .box {
-	background-color: #C389FA;
+	background-color: transparent;
 	height: 150px;
 	width: 300px;
 	position: absolute;
@@ -23,7 +23,7 @@
 }
 
 .selected {
-	background-color: #342FD4;
+	background-color: transparent;
 	border: 2px solid #EB4B48;
 }
 
