--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
 	width: 300px;
 	position: absolute;
 	outline: none;
+	z-index: 10;
 
 	&:hover {
 		border: 2px solid #EB4B48;
@@ -23,6 +24,10 @@
 .selected {
 	background-color: transparent;
 	border: 2px solid #EB4B48;
+}
+
+.biggest {
+	z-index: 9;
 }
 
 .guide {
