Update styles for coordinates

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,10 @@
 	left: 0;
 	color: #EB4B48;
 	font-weight: bold;
+	height: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
 }
 
 .dimensions {
