--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@
 .selected,
 .boxGroup {
 	background-color: transparent;
-	outline: 2px solid #EB4B48;
+	outline: 2px solid #EB4B48 !important;
 }
 
 .boxGroup {
