changed the color of guide lines

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,8 +41,8 @@
 }
 
 .guide {
-	background: #EB4B48;
-	color: #EB4B48;
+	background: #1b47f3;
+	color: #1b47f3;
 	display: none;
 	left: 0;
 	position: absolute;
@@ -102,7 +102,7 @@
 	width: 10px;
 	height: 10px;
 	background-color: #FFF;
-	border: 2px solid #000;
+	border: 1px solid #000;
 	position: absolute;
 	pointer-events: all;
 }
