fixing width, height text moves to multiple lines

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,8 @@
 
 // Displaying coordinates and dimensions
 .coordinates {
+	overflow: hidden;
+    white-space: nowrap;
 	line-height: normal;
 	font-size: 9px;
 	position: absolute;
