--- a/src/styles.scss
+++ b/src/styles.scss
@@ -396,10 +396,17 @@
 }
 
 .cropper_border {
-	width: calc(100% + 8px);
-    height: calc(100% + 8px);
+	width: calc(100%);
+    height: calc(100%);
     position: absolute;
-    top: -4px;
-    left: -4px;
-    border: 4px solid #00000020;
+    // top: -4px;
+    // left: -4px;
+	// border: 4px solid #00000020;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cropper_notches_container {
+
 }
