--- a/src/styles.scss
+++ b/src/styles.scss
@@ -226,10 +226,19 @@
 
 // Load the rotate icon svg and rotate it appropriately for each corner
 .rotateHandle {
-	width: 25px;
-	height: 25px;
+	width: 35px;
+	height: 35px;
 	z-index: 98;
 	opacity: 0;
+	background-repeat: no-repeat;
+	background-color: transparent;
+  background-position: center;
+	border: none;
+	cursor: none;
+
+	&:hover{
+		opacity: 1;
+	}
 }
 
 @svg-load rotate-tr url(./assets/rotate.svg) {
@@ -264,27 +273,27 @@
 }
 
 .rotate-tr {
-	top: -20px;
-	right: -20px;
-	cursor: svg-inline(rotate-tr) 0 0, auto;
+	background-image: svg-inline(rotate-tr);
+	top: -30px;
+	right: -30px;
 }
 
 .rotate-tl {
-	top: -20px;
-	left: -20px;
-	cursor: svg-inline(rotate-tl) 0 0, auto;
+	background-image: svg-inline(rotate-tl);
+	top: -30px;
+	left: -30px;
 }
 
 .rotate-br {
-	bottom: -20px;
-	right: -20px;
-	cursor: svg-inline(rotate-br) 0 0, auto;
+	background-image: svg-inline(rotate-br);
+	bottom: -30px;
+	right: -30px;
 }
 
 .rotate-bl {
-	bottom: -20px;
-	left: -20px;
-	cursor: svg-inline(rotate-bl) 0 0, auto;
+	background-image: svg-inline(rotate-bl);
+	bottom: -30px;
+	left: -30px;
 }
 
 
@@ -405,8 +414,4 @@
 	display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.cropper_notches_container {
-
 }
