--- a/src/styles.scss
+++ b/src/styles.scss
@@ -189,16 +189,18 @@
 }
 
 .stretchable-resize-cl, .stretchable-resize-cr {
-	height: 30px !important;
-	top: calc(50% - 15px) !important;
+	height: 20px !important;
+	top: calc(50% - 10px) !important;
 	width: 5px !important;
 	opacity: 1;
+	border-radius: 30px;
 }
 .stretchable-resize-ct, .stretchable-resize-cb {
-	width: 30px !important;
-	left: calc(50% - 15px) !important;
+	width: 20px !important;
+	left: calc(50% - 10px) !important;
 	height: 5px !important;
 	opacity: 1;
+	border-radius: 30px;
 }
 
 .stretchable-resize-cl {
